grammar.js
    endianness: (_) => choice("BIG_ENDIAN", "LITTLE_ENDIAN"),
    identifier: (_) => /[a-zA-Z_\$][a-zA-Z0-9_\.:*]*/,
    number: ($) =>
      choice(
        $._hexadecimal_number,
        seq(/-?\d+(\.\d*)?/, optional(/e\d+/)),
        $._octal_number,
        $._binary_number,
        // Other values from
        // <https://github.com/OpenC3/cosmos/blob/63d0fc07dc5d6e0922fd891e69f4b2768a94bd1d/openc3/lib/openc3/config/config_parser.rb#L338>
        "MAX",
        "MIN",
        "MIN_INT8",
        "MAX_INT8",
        "MIN_INT16",
        "MAX_INT16",
        "MIN_INT32",
        "MAX_INT32",
        "MIN_INT64",
        "MAX_INT64",
        "MIN_UINT8",
        "MIN_UINT16",
        "MIN_UINT32",
        "MIN_UINT64",
        "MAX_UINT8",
        "MAX_UINT16",
        "MAX_UINT32",
        "MAX_UINT64",
        "MIN_FLOAT64",
        "MAX_FLOAT64",
        "MIN_FLOAT32",
        "MAX_FLOAT32",
        "POS_INFINITY",
        "NEG_INFINITY",
      ),
    string: (_) =>
      choice(
        seq(/"(\\"|[^"])*"/, optional(seq("+", /"(\\"|[^"])*"/))),
        seq(/'(\\'|[^'])*'/, optional(seq("+", /'(\\'|[^'])*'/))),
      ),

    modifier_accessor: ($) =>
      seq(
        "ACCESSOR",
        field("class", $.identifier),
        field("argument", $.string),
      ),
    modifier_catchall: (_) => "CATCHALL",
    modifier_description: ($) => seq("DESCRIPTION", $._description),
    modifier_format_string: ($) => seq("FORMAT_STRING", $.string),
    modifier_hidden: (_) => "HIDDEN",
    modifier_key: ($) =>
      seq("KEY", field("key", choice($.string, $.identifier))),
    modifier_meta: ($) =>
      seq(
        "META",
        field("key", $.identifier),
        field("value", repeat(choice($.identifier, $.string))),
      ),
    modifier_obfuscate: (_) => "OBFUSCATE",
    modifier_overlap: (_) => "OVERLAP",
    modifier_state: ($) =>
      seq(
        "STATE",
        field("name", $.identifier),
        field("value", $.number),
        optional(field("color", choice("GREEN", "YELLOW", "RED"))),
        optional(
          choice(
            $.modifier_disable_messages,
            seq($.modifier_hazardous, optional($._description)),
          ),
        ),
      ),
    modifier_subpacketizer: ($) =>
      seq(
        "SUBPACKETIZER",
        field("class", $.identifier),
        field("argument", $.string),
      ),
    modifier_allow_short: (_) => "ALLOW_SHORT",
    modifier_ignore_overlap: (_) => "IGNORE_OVERLAP",
    modifier_processor: ($) =>
      seq(
        "PROCESSOR",
        field("class", $.identifier),
        field("argument", $.string),
      ),
    modifier_template: ($) => seq("TEMPLATE", $.string),
    modifier_limits: ($) =>
      seq(
        "LIMITS",
        field("set", $.identifier),
        field("persistence", $.number),
        field("enabled", $.identifier),
        field("red_low", $.number),
        field("yellow_low", $.number),
        field("yellow_high", $.number),
        field("red_high", $.number),
        prec(1, optional(field("green_low", $.number))),
        prec(2, optional(field("green_high", $.number))),
      ),
    modifier_limits_response: ($) =>
      seq(
        "LIMITS_RESPONSE",
        field("script", $.identifier),
        field("argument", $.string),
      ),
    modifier_converted_data: ($) =>
      seq("CONVERTED_DATA", field("type", $.identifier)),
    conversion_read: ($) =>
      seq(
        "READ_CONVERSION",
        field("script", $.identifier),
        repeat(field("argument", choice($.string, $.identifier))),
      ),
    conversion_poly_read: ($) =>
      seq(
        "POLY_READ_CONVERSION",
        $.number,
        $.number,
        $.number,
        repeat($.number),
      ),
    conversion_seg_poly_read: ($) =>
      seq("SEG_POLY_READ_CONVERSION", repeat1($.number)),
    conversion_generic_read: ($) =>
      seq(
        "GENERIC_READ_CONVERSION_START",
        optional(
          seq(
            $.generic_dtype,
            optional($.number)
          )
        ),
        $._newline,
        alias($._code, $.code),
        "GENERIC_READ_CONVERSION_END",
      ),
    modifier_limits_group: ($) => seq("LIMITS_GROUP", $.identifier),
    modifier_limits_group_item: ($) =>
      seq(
        "LIMITS_GROUP_ITEM",
        field("target", $.identifier),
        field("packet", $.identifier),
        field("item", $.identifier),
        field("group", $.identifier),
      ),
    modifier_units: ($) =>
      seq(
        "UNITS",
        field("full_name",   choice($.string, $.identifier)),
        field("abbreviated", choice($.string, $.identifier)),
      ),
    modifier_variable_bit_size: ($) =>
      seq(
        "VARIABLE_BIT_SIZE",
        field("length_field", $.identifier),
        prec(1, optional(field("bits_per_count", $.number))),
        prec(2, optional(field("bit_offset", $.number))),
      ),
    modifier_virtual: (_) => "VIRTUAL",

    telemetry_definition: ($) =>
      seq(
        "TELEMETRY",
        field("target", $.identifier),
        field("name", $.identifier),
        field("endianness", $.endianness),
        optional($._description),
      ),

    item_definition: ($) =>
      seq(
        "ITEM",
        field("name", $.identifier),
        field("bit_offset", $.number),
        field("bit_size", $.number),
        choice($._number_item, $._string_item, $._block_item),
        optional($._description),
        optional(field("endianness", $.endianness)),
      ),
    _number_item: ($) => seq(field("data_type", $.number_dtype)),
    _string_item: (_) => seq(field("data_type", "STRING")),
    _block_item: (_) => seq(field("data_type", "BLOCK")),
    _hexadecimal_number: (_) => /0[xX][0-9a-fA-F]+/,
    _octal_number: (_) => /0[0-7]+/,
    _binary_number: (_) => /0b[01]+/,
    _description: ($) => field("description", $.string),
    _newline: (_) => /\r?\n/,
