test/corpus/telemetry_modifiers.txt
=================
Telemetry Level Modifiers
=================
TELEMETRY INST HEALTH BIG_ENDIAN
  HIDDEN
  CATCHALL
  VIRTUAL
  ALLOW_SHORT
  IGNORE_OVERLAP
  PROCESSOR MyProcessor "arg"
  ACCESSOR MyAccessor "arg"
  SUBPACKETIZER MySubpacketizer "arg"
  TEMPLATE "{\"id\": 1}"
  META KEY VALUE
  LIMITS_GROUP GROUP_NAME
  LIMITS_GROUP_ITEM INST PKT ITEM GROUP_NAME

---

(source_file
  (telemetry_definition
    target: (identifier)
    name: (identifier)
    endianness: (endianness)
    (modifier_hidden)
    (modifier_catchall)
    (modifier_virtual)
    (modifier_allow_short)
    (modifier_ignore_overlap)
    (modifier_processor class: (identifier) argument: (string))
    (modifier_accessor class: (identifier) argument: (string))
    (modifier_subpacketizer class: (identifier) argument: (string))
    (modifier_template content: (string))
    (modifier_meta key: (identifier) value: (identifier))
    (modifier_limits_group (identifier))
    (modifier_limits_group_item target: (identifier) packet: (identifier) item: (identifier) group: (identifier))))

=================
Item Modifiers
=================
TELEMETRY INST HEALTH BIG_ENDIAN
  ITEM VOLTAGE 0 32 FLOAT
    STATE OFF 0
    STATE ON 1
    UNITS "Volts" "V"
    FORMAT_STRING "%0.2f"
    DESCRIPTION "Updated description"
    META KEY VALUE
    OVERLAP
    KEY MY_KEY
    VARIABLE_BIT_SIZE LEN_ITEM 8 0
    OBFUSCATE
    HIDDEN
    LIMITS DEFAULT 1 ENABLED 10 12 14 16
    LIMITS_RESPONSE my_script.rb "arg"
    CONVERTED_DATA FLOAT

---

(source_file
  (telemetry_definition
    target: (identifier)
    name: (identifier)
    endianness: (endianness)
    (item_definition
      name: (identifier)
      bit_offset: (number)
      bit_size: (number)
      data_type: (identifier)
      (modifier_state name: (identifier) value: (number))
      (modifier_state name: (identifier) value: (number))
      (modifier_units label: (string) abbreviation: (string))
      (modifier_format_string (string))
      (modifier_description (string))
      (modifier_meta key: (identifier) value: (identifier))
      (modifier_overlap)
      (modifier_key (identifier))
      (modifier_variable_bit_size length_item: (identifier) bits_per_count: (number) value_bit_offset: (number))
      (modifier_obfuscate)
      (modifier_hidden)
      (modifier_limits
        set: (identifier)
        persistence: (number)
        enabled: (identifier)
        red_low: (number)
        yellow_low: (number)
        yellow_high: (number)
        red_high: (number))
      (modifier_limits_response script: (identifier) argument: (string))
      (modifier_converted_data type: (identifier)))))

=================
Item Conversions
=================
TELEMETRY INST HEALTH BIG_ENDIAN
  ITEM VOLTAGE 0 32 FLOAT
    READ_CONVERSION my_script.rb "arg"
    POLY_READ_CONVERSION 1.0 2.0 3.0
    SEG_POLY_READ_CONVERSION 0 100 1.0 2.0 3.0 100 200 4.0 5.0 6.0
    GENERIC_READ_CONVERSION_START
      value * 2
    GENERIC_READ_CONVERSION_END

---

(source_file
  (telemetry_definition
    target: (identifier)
    name: (identifier)
    endianness: (endianness)
    (item_definition
      name: (identifier)
      bit_offset: (number)
      bit_size: (number)
      data_type: (identifier)
      (conversion_read script: (identifier) argument: (string))
      (conversion_poly_read (number) (number) (number))
      (conversion_seg_poly_read
        (number) (number) (number) (number) (number)
        (number) (number) (number) (number) (number))
      (conversion_generic_read (code)))))
